app/assets/stylesheets/reports.scss
.reports {
  h1 {
    @extend %typography-page-title;
    margin: 32px 0 17px;
  }
  a {
    text-decoration: none;
    color: $actionable-blue;
  }
}
.setup-quick-reports {
  width: (7 * $grid-column-width) + (6 * $gutter-width);
  h2 {
    @extend %typography-section-title;
    margin: 0 0 5px;
  }
  p {
    margin: 0 0 50px;
  }
}
.reports-table {
  @extend %table-striped;
  thead {
    border-bottom: 1px solid $light-blue;
  }
  td, th {
    vertical-align: top;
    text-align: left;
    box-sizing: border-box;
    overflow: hidden;
  }
  th {
    @extend %typography-header-text;
    color: $medium-gray;
    &:first-child {
      @extend %typography-section-title;
      padding-bottom: 10px;
      color: $text-color;
    }
  }
  td {
    @extend %typography-subtitle;
    padding-top: 15px;
    height: 100px;
    h3 {
      @extend %typography-subtitle;
      margin: 0 0 5px;
    }
    p {
      margin: 0;
      font-size: 0.8667rem;
      font-weight: $normal-weight;
    }
    &:last-child {
      text-transform: uppercase;
    }
  }
  td:first-child, th:first-child {
    width: (8 * $grid-column-width) + (7 * $gutter-width);
    padding-right: $grid-column-width + $gutter-width;
    padding-left: $gutter-width;
  }
  .updated-cell {
    width: $grid-column-width + (2 * $gutter-width);
  }
  .history-cell {
    width: ( 2 * $grid-column-width) + (2 * $gutter-width);
  }
}

